my second commit

--- a/index.html
+++ b/index.html
@@ -6,10 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELPING HAND</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Roboto+Condensed&family=Roboto+Slab:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styel.css">
+
 </head>
 
 <body>
+    <!--i love you(1)-->
+    <section class="full-width">
+        <div class="neddy-people">
+            <h1>Let’s Help Those Who Are <br><br><br>
+                More In Need</h1>
+        </div>
+        <div class="neddy-people">
+            <p>Water-related hazards or hydro-hazards are the results of complex interactions in the ocean
+                atmosphere-land process cascade. Floods and droughts are expected to increase due to global warming.
+            </p>
+            <button class="link-button" type="butoon">Donate Us</button>
+        </div>
+    </section>
+    <!--i love you(2)-->
+    <section>
+        <div class="neddy-people">
+            <h1>Donate Us</h1>
+            <p>The Intergovernmental Hydrological Programme stimulates and encourages holistic hydrological research
+                and
+                knowledge generation, assists Member States in research and training activities.</p>
 
+            <div class="fiex ">
+                <ul>
+                    <li>100TK</li>
+                    <li>200TK</li>
+                    <li><span>500TK</span></li>
+                    <li>1000TK</li>
+                    <li>5000TK</li>
+                </ul>
+                <div class="fiex ">
+                    <input class="fiex-box" type="text" placeholder="Other amount(USD)">
+                    <button class="link-button" type="butoon">Donate Us</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--i love you(3)-->
+    <section>
+        <div class="neddy-people">
+            <h1>Our Donation System</h1>
+            <p> Author Name : <span>Taufique Hossen Tanmoy</span></P>
+            <p>By bringing innovative, interdisciplinary, and environmentally sound methods and tools into play, while
+                fostering and capitalizing on advances in water sciences, IHP acts at the science-policy nexus to help
+                meeting today’s global water challenges.</p>
+        </div>
+    </section>
 </body>
 
 </html>
