--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <p>Water-related hazards or hydro-hazards are the results of complex interactions in the ocean
                 atmosphere-land process cascade. Floods and droughts are expected to increase due to global warming.
             </p>
-            <button class="link-button" type="butoon">Donate Us</button>
+            <a href='https://www.facebook.com/taufiquehossain.tanmoy'><button class="link-button" type="butoon">Donate
+                    Us</button></a>
+
         </div>
     </section>
     <!--i love you(2)-->
@@ -47,7 +49,9 @@
                 </ul>
                 <div class="fiex ">
                     <input class="fiex-box" type="text" placeholder="Other amount(USD)">
-                    <button class="link-button" type="butoon">Donate Us</button>
+                    <a href='https://www.facebook.com/taufiquehossain.tanmoy'><button class="link-button"
+                            type="butoon">Donate
+                            Us</button></a>
                 </div>
             </div>
         </div>
@@ -60,6 +64,34 @@
             <p>By bringing innovative, interdisciplinary, and environmentally sound methods and tools into play, while
                 fostering and capitalizing on advances in water sciences, IHP acts at the science-policy nexus to help
                 meeting today’s global water challenges.</p>
+        </div>
+    </section>
+    <section>
+        <div class="system-manage">
+            <div class="child-containt ">
+                <img src="icons/icon8.svg" alt="">
+                <h2>Food for a family</h2>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="child-containt ">
+                <img src="icons/icon13.svg" alt="">
+                <h2>Shelter for a family</h2>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="child-containt ">
+                <img src="icons/icon5.svg" alt="">
+                <h2>Education for a child</h2>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
         </div>
     </section>
 </body>
