--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Roboto+Condensed&family=Roboto+Slab:wght@500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styel.css">
-
 </head>
 
 <body>
@@ -94,6 +93,13 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-contain">
+            <h3> Be Humble <br>
+                I’m gonna do it</h3>
+            <p>@Copy right Warning</p>
+        </div>
+    </footer>
 </body>
 
 </html>
